--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    /* width: 80%; */
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     font-family: Helvetica, sans-serif;
   }
@@ -58,11 +59,11 @@
     justify-content: space-between;
     width: 100%;
     max-width: 867px;
-    margin: 25px 10px;
-    height: calc(100% - 50px);
-    border: var(--border);
+    /* margin: 25px 10px; */
+    height: calc(100% - 5px);
+    border: 2px solid #ddd;
     border-radius: 5px;
-    background: var(--msger-bg);
+    background: #fff;
     box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
   }
   
@@ -70,7 +71,7 @@
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    border-bottom: var(--border);
+    border-bottom: 2px solid #ddd;
     background: #eee;
     color: #666;
   }
@@ -108,10 +109,10 @@
     border-radius: 50%;
   }
   .msg-bubble {
-    max-width: 450px;
-    padding: 15px;
-    border-radius: 15px;
-    background: var(--left-msg-bg);
+    max-width: 50%;
+    padding: 10px;
+    border-radius: 20px;
+    background:#ececec;
   }
   .msg-info {
     display: flex;
@@ -158,6 +159,7 @@
   .msger-input {
     flex: 1;
     background: #ddd;
+    margin-left:10px;
   }
   .msger-send-btn {
     margin-left: 10px;
